about us contrast fixes

--- a/Bountiful/styles/base.css
+++ b/Bountiful/styles/base.css
@@ -682,6 +682,7 @@
         padding-left: 25px;
         text-align: left;
         margin: 20px;
+        margin-top: 150px;
         border: none;
         width: 200px;
         height: 120px;
